Fix content and footer spacing

--- a/_sass/jekyll_cmdbrew/layouts/_default.scss
+++ b/_sass/jekyll_cmdbrew/layouts/_default.scss
@@ -9,7 +9,7 @@
   overflow: hidden;
 
   @include media-breakpoint-down(#{nth(map-keys($grid-breakpoints), index(map-keys($grid-breakpoints), map-get($breakpoints, 'aside')) - 1)}) {
-    $_offset: map-get($spacers, 3) * 2;
+    $_offset: map-get($spacers, 2) * 2;
     $_height: $input-height-lg;
     max-width: 100%;
     padding-bottom: calc(#{$_offset} + #{$_height});
@@ -17,6 +17,11 @@
 
   @include media-breakpoint-up(#{map-get($breakpoints, 'aside')}) {
     main { max-width: calc(100% - #{$aside-width}); }
+
+    #content {
+      padding-right: $spacer;
+      padding-left: $spacer;
+    }
   }
 
   #wrapper {
